revision Day 1 some minor changes

--- a/basic dsa/arrays/arrays_basics.ipynb
+++ b/basic dsa/arrays/arrays_basics.ipynb
@@ -386,7 +386,7 @@
    "metadata": {},
    "source": [
     "# Multidimensional arrays \n",
-    "- we also can hapndle multi dimentional array using numpy "
+    "- we also can handle multi dimentional array using numpy "
    ]
   },
   {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "id": "7811d79a",
    "metadata": {},
    "outputs": [
@@ -455,6 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "None\n",
       "[11, 12, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], 'Mohit', 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6]\n"
      ]
     }
@@ -473,7 +474,7 @@
     "a.append(s)\n",
     "\n",
     "c = [1,2,3,4,5,6] # \n",
-    "a.extend(b) # any enumerable  = Extend list by appending all elements from b\n",
+    "print(a.extend(b)) # any enumerable  = Extend list by appending all elements from b\n",
     "# concatenated with the + operato \n",
     "z = a+b+c\n",
     "print(z)  # s does not modify any of the original lists:\n",
@@ -511,12 +512,12 @@
    "metadata": {},
    "source": [
     "# Slicing of an Array or list\n",
-    "- Elements from beginning to a range use [:Index]\n",
-    "- Elements from end use [:-Index]\n",
-    "- Elements from specific Index till the end use [Index:]\n",
-    "- Elements within a range, use [Start Index:End Index]\n",
-    "- Print complete List, use [:].\n",
-    "- For Reverse list, use [::-1]."
+    "- Elements from beginning to a range use -----------       [:Index]\n",
+    "- Elements from end use     -----------        [:-Index]\n",
+    "- Elements from specific Index till the end use  -----------       [Index:]\n",
+    "- Elements within a range, use     ----------- [Start Index:End Index]\n",
+    "- Print complete List, use        -----------  [:].\n",
+    "- For Reverse list, use         ----------- [::-1]."
    ]
   },
   {
@@ -558,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
