--- a/basic dsa/arrays/trapwater.ipynb
+++ b/basic dsa/arrays/trapwater.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "772cbd57",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,9 @@
     "# take an array height and find left maximum and right maximum \n",
     "# using the height given in questoin and \n",
     "# then take the minimum of both left and right maximum and convert it into integer and return it\n",
-    "# np.accumulate.maximum :  NumPy function that computes the cumulative maximum of elements in an array along a specified axis. It returns an array where each element at index i is the maximum value encountered from the start of the array up to and including index i.\n",
+    "# np.accumulate.maximum :  NumPy function that computes the cumulative maximum of elements in an\n",
+    "#  array along a specified axis. It returns an array where each element at index i is the maximum \n",
+    "# value encountered from the start of the array up to and including index i.\n",
     "#  This function is particularly useful for finding the running maximum over a sequence of values\n",
     "import numpy as np\n",
     "class Solution:\n",
