--- a/operationonLL.ipynb
+++ b/operationonLL.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6226947c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from commons  import Node , take_input_better, print_LL\n"
+    "\n",
+    "class Node:\n",
+    "    def __init__(self,data):\n",
+    "        self.data  = data \n",
+    "        self.next = None\n",
+    "    "
    ]
   },
   {
