--- a/simple_rticks.ipynb
+++ b/simple_rticks.ipynb
@@ -31,26 +31,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2015a2e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'map'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m digits = [\u001b[32m4\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m1\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m num = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdigits\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m()\n",
-      "\u001b[31mTypeError\u001b[39m: int() argument must be a string, a bytes-like object or a real number, not 'map'"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "968a5eb2",
    "metadata": {},
@@ -91,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "efde553b",
    "metadata": {},
    "outputs": [
@@ -118,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f76c19be",
    "metadata": {},
    "outputs": [
@@ -126,18 +106,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "None\n",
+      "[2, 2, 5, 5, 5, 5, 6, 8]\n"
      ]
     }
    ],
    "source": [
     "m = lst.sort()\n",
-    "print(m)"
+    "print(m) # .sort function return None \n",
+    "print(lst) # but after that function we can get the sorted list "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "9991e60c",
    "metadata": {},
    "outputs": [
@@ -153,7 +135,7 @@
     }
    ],
    "source": [
-    "# intersections of 3 sets\n",
+    "# intersections of 2 sets\n",
     "\n",
     "s = [1,2,3, 3, 4,5,6,7]\n",
     "s2 = [3,4,5 ,3,6,7,8,9,9,0,]\n",
@@ -163,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "4e079ba9",
    "metadata": {},
    "outputs": [
@@ -173,38 +155,37 @@
        "array([4, 5, 6, 7, 1, 2, 3, 3])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import numpy as np # this will rotate the arrau by the given number of steps\n",
     "s = [1,2,3, 3, 4,5,6,7]\n",
     "np.roll(s,4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "549ad43f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[9, 7, 6, 5, 3, 3, 2, 1]"
+       "{1, 2, 3, 5, 6, 7, 9}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s = [1,2,3, 3, 9,5,6,7]\n",
-    "set(s).to\n",
-    "\n",
+    "s = set(s)\n",
     "s\n"
    ]
   },
@@ -219,10 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8691548d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'h': 0, 'e': 1, 'l': 3, 'o': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"hello\"\n",
     "char_dict = {ch: idx for idx, ch in enumerate(list(s))}\n",
@@ -328,6 +317,29 @@
     "            reverse = reverse * 10 + digit\n",
     "\n",
     "        return reverse == x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d2940fc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "so = '4040404'\n",
+    "\n",
+    "so[:]==so[::-1]"
    ]
   },
   {
