new version of changes form 2nd device

--- a/basic dsa/arrays/arrays_basics.ipynb
+++ b/basic dsa/arrays/arrays_basics.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "33b3dfc1",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "cbca08c9",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "963ba649",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "d4fb7089",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
      "output_type": "stream",
      "text": [
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 7, 4, 4, 8, 9, 10]\n",
-      "array('i', [0, 1, 2, 3, 4, 5, 6, 6, 7, 4, 4, 8, 9, 10])\n"
+      "array('i', [0, 1, 2, 3, 4, 5, 6, 7, 4, 4, 8, 9, 10])\n"
      ]
     }
    ],
@@ -144,16 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d92dfd55",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 7, 4, 4, 8, 9, 10, 19, 20, 21]\n",
-      "array('i', [0, 1, 2, 3, 4, 5, 6, 6, 7, 4, 4, 8, 9, 10, 19, 20, 21])\n"
+     "ename": "NameError",
+     "evalue": "name 'my_array' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Add items from list into array using fromlist() method\u001b[39;00m\n\u001b[32m      2\u001b[39m c=[\u001b[32m19\u001b[39m,\u001b[32m20\u001b[39m,\u001b[32m21\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mmy_array\u001b[49m.fromlist(c)\n\u001b[32m      4\u001b[39m  \u001b[38;5;66;03m## arr = [] has no attribute fromlist so we use extend \u001b[39;00m\n\u001b[32m      5\u001b[39m arr.extend(c)\n",
+      "\u001b[31mNameError\u001b[39m: name 'my_array' is not defined"
      ]
     }
    ],
@@ -559,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
