--- a/basic dsa/searching/all_searching_algos.ipynb
+++ b/basic dsa/searching/all_searching_algos.ipynb
@@ -253,33 +253,33 @@
    "outputs": [],
    "source": [
     "def fibonacci_search(arr, target):\n",
-    "    fibMMm2 = 0\n",
-    "    fibMMm1 = 1\n",
-    "    fibM = fibMMm2 + fibMMm1\n",
+    "    fib2 = 0\n",
+    "    fib1 = 1\n",
+    "    fibM = fib2 + fib1\n",
     "\n",
     "    while fibM < len(arr):\n",
-    "        fibMMm2 = fibMMm1\n",
-    "        fibMMm1 = fibM\n",
-    "        fibM = fibMMm2 + fibMMm1\n",
+    "        fib2 = fib1\n",
+    "        fib1 = fibM\n",
+    "        fibM = fib2 + fib1\n",
     "\n",
     "    offset = -1\n",
     "\n",
     "    while fibM > 1:\n",
-    "        i = min(offset + fibMMm2, len(arr) - 1)\n",
+    "        i = min(offset + fib2, len(arr) - 1)\n",
     "\n",
     "        if arr[i] < target:\n",
-    "            fibM = fibMMm1\n",
-    "            fibMMm1 = fibMMm2\n",
-    "            fibMMm2 = fibM - fibMMm1\n",
+    "            fibM = fib1\n",
+    "            fib1 = fib2\n",
+    "            fib2 = fibM - fib1\n",
     "            offset = i\n",
     "        elif arr[i] > target:\n",
-    "            fibM = fibMMm2\n",
-    "            fibMMm1 -= fibMMm2\n",
-    "            fibMMm2 = fibM - fibMMm1\n",
+    "            fibM = fib2\n",
+    "            fib1 -= fib2\n",
+    "            fib2 = fibM - fib1\n",
     "        else:\n",
     "            return i\n",
     "\n",
-    "    if fibMMm1 == 1 and arr[offset + 1] == target:\n",
+    "    if fib1 == 1 and arr[offset + 1] == target:\n",
     "        return offset + 1\n",
     "\n",
     "    return -1\n"
