new dsa questions added as asked in oracle PYQs.

--- a/basic dsa/lists/matrix/basic operations on matrix.ipynb
+++ b/basic dsa/lists/matrix/basic operations on matrix.ipynb
@@ -211,7 +211,7 @@
    "id": "37df36bb",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)\n",
+    " ![image.png](attachment:image.png)\n",
     "-  example 2 \n",
     "Input: mat = [[0,0,0],[0,1,0],[1,1,1]]\n",
     "Output: [[0,0,0],[0,1,0],[1,2,1]]\n",
@@ -491,6 +491,22 @@
     "print(sol.minDifference(180, 2))  # [1, 10]\n",
     "print(sol.minDifference(44, 3))   # [11, 2, 2]\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abec15de",
+   "metadata": {},
+   "source": [
+    "### converting 2 d grid to 1d list :\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aba40eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -509,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
