--- a/basic dsa/searching/all_searching_algos.ipynb
+++ b/basic dsa/searching/all_searching_algos.ipynb
@@ -59,6 +59,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67e865b5",
+   "metadata": {},
+   "source": [
+    "## tips to identify binary problem in question\n",
+    "\n",
+    "- The problem would usually asks:\n",
+    "- minimum value such that something is possible;\n",
+    "- maximum value such that something is allowed;\n",
+    "- If the problem feels like: “For a given X, can I check this easily?”\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "259c1984",
