--- a/basic dsa/sorting/all_sorting_algos.ipynb
+++ b/basic dsa/sorting/all_sorting_algos.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "https://www.geeksforgeeks.org/dsa/sorting-algorithms/\n",
     "\n",
+    "- For a lot of problems hashing works better than sorting, for example, finding distinct elements, finding a pair with given sum.\n",
+    "\n",
     "1. Tim sort in built in python and java \n",
     "#### Comparison Based\n",
     "2. Selection Sort,\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9ccb42e4",
    "metadata": {},
    "outputs": [
@@ -74,12 +76,12 @@
     "            # swap \n",
     "\n",
     "        arr[i], arr[min_idx]= arr[min_idx], arr[i] \n",
-    "\n",
+    "    return arr\n",
     "\n",
     "data = [64, 25, 12, 22, 11]\n",
     "print('original array', data)\n",
-    "\n",
-    "print('sorted array ',arr)\n"
+    "sorted_data= selection_sort(data.copy())# .copy() for preserving the original array \n",
+    "print('sorted array ',sorted_data)\n"
    ]
   },
   {
@@ -463,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
