--- a/trees/dict&bstree.ipynb
+++ b/trees/dict&bstree.ipynb
@@ -18,7 +18,7 @@
     "  # in hashmap  lookup operation is o(1) and insertiona and deletion is also o(1) on average \n",
     "def get_hash(key):\n",
     "    h=0\n",
-    "    for cahr in key: \n",
+    "    for char in key: \n",
     "        h+= ord(char)\n",
     "    return h %100\n",
     "\n"
@@ -26,10 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "957221b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_hash('march 28')"
    ]
@@ -320,16 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "10f48976",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after function definition on line 6 (1866791204.py, line 7)",
+     "ename": "AttributeError",
+     "evalue": "'BinarySearchTreeNode' object has no attribute 'in_order_traversal'",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mif data == self.data:\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after function definition on line 6\n"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 45\u001b[39m\n\u001b[32m     43\u001b[39m numbers = [\u001b[32m17\u001b[39m,\u001b[32m4\u001b[39m,\u001b[32m1\u001b[39m,\u001b[32m20\u001b[39m,\u001b[32m9\u001b[39m,\u001b[32m18\u001b[39m,\u001b[32m34\u001b[39m,-\u001b[32m3\u001b[39m]\n\u001b[32m     44\u001b[39m numbers_tree = build_tree(numbers)\n\u001b[32m---> \u001b[39m\u001b[32m45\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mnumbers_tree\u001b[49m\u001b[43m.\u001b[49m\u001b[43min_order_traversal\u001b[49m())\n",
+      "\u001b[31mAttributeError\u001b[39m: 'BinarySearchTreeNode' object has no attribute 'in_order_traversal'"
      ]
     }
    ],
@@ -340,7 +354,7 @@
     "        self.left = None\n",
     "        self.right = None\n",
     "    def add_child(self, data):\n",
-    "        if data == self.data:s\n",
+    "        if data == self.data:\n",
     "            return \n",
     "        if data<self.data:\n",
     "            # add data in left subtree\n",
@@ -395,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5c9af8d7",
    "metadata": {},
    "outputs": [],
@@ -422,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6b7c0701",
    "metadata": {},
    "outputs": [
@@ -467,6 +481,7 @@
     "        if root is not None:\n",
     "            self.traverse_Inorder(root.left)\n",
     "            print(root.data) \n",
+    "            self.traverse_Inorder(root.right)\n",
     "           \n",
     "# if we need to secure our root or any variable  so we save it in temp variable \n",
     "\n",
@@ -525,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "096432cb",
    "metadata": {},
    "outputs": [],
@@ -571,7 +586,7 @@
     "def inOrder(root):\n",
     "    if root is not None:\n",
     "        inOrder(root.left)\n",
-    "        print(root.info, end= ' ')\n",
+    "        print(root.value, end= ' ')\n",
     "        inOrder(root.right)\n",
     "    \n",
     "inOrder(root)\n",
@@ -1076,7 +1091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
