--- a/basic dsa/arrays/arrays_basics.ipynb
+++ b/basic dsa/arrays/arrays_basics.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "33b3dfc1",
    "metadata": {},
    "outputs": [
@@ -360,6 +360,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "12a951a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In Python 3 use typecode 'u' and fromunicode(); convert back to a string with ''.join(...)my_char_array = array('u', \"mohit\")my_char_array.fromunicode(\"stuff\")print(my_char_array)           # array('u', 'mohitstuff')\n",
+    "print(''.join(my_char_array))  # \"mohitstuff\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "572c0dc1",
    "metadata": {},
    "outputs": [
@@ -370,7 +381,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#  Append a string to char array using fromstring() method\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m my_char_array = \u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mo\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mh\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mi\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mt\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m my_char_array.fromstring(\u001b[33m\"\u001b[39m\u001b[33mstuff\u001b[39m\u001b[33m\"\u001b[39m)  \u001b[38;5;66;03m# only c can attacth to string not any other data tupe \u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(my_char_array)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#  Append a string to char array using fromstring() \u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# - (addition, deletion) of data Less flexibility since addition, and deletion has to be done element-wise\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m my_char_array = \u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mo\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mh\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mi\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mt\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m my_char_array.fromstring(\u001b[33m\"\u001b[39m\u001b[33mstuff\u001b[39m\u001b[33m\"\u001b[39m)  \u001b[38;5;66;03m# only c can attacth to string not any other data tupe \u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m.join(my_char_array))  \n",
       "\u001b[31mTypeError\u001b[39m: array() argument 1 must be a unicode character, not list"
      ]
     }
@@ -380,7 +391,7 @@
     "# - (addition, deletion) of data Less flexibility since addition, and deletion has to be done element-wise\n",
     "my_char_array = array('c',['m','o','h','i','t'] )\n",
     "my_char_array.fromstring(\"stuff\")  # only c can attacth to string not any other data tupe \n",
-    "print(my_char_array)"
+    "print(my_char_array)\n"
    ]
   },
   {
@@ -562,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
