--- a/basic dsa/strings/basic_ops.ipynb
+++ b/basic dsa/strings/basic_ops.ipynb
@@ -12,7 +12,7 @@
     "s = input('Enter the string: ')\n",
     "def allsubs(s):\n",
     "    n = len(s)\n",
-    "    substring = set()\n",
+    "    substring = set() #for uniqness we choose set() \n",
     "    # generate all substing \n",
     "    for i in range(n):\n",
     "        for j in range(i+1, n+1):\n",
@@ -70,21 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eb64aa51",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'sum' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m         y//=\u001b[32m10\u001b[39m\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[38;5;28msum\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m23\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36msum\u001b[39m\u001b[34m(y)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msum\u001b[39m(y):\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mwhile\u001b[39;00m y:\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m         \u001b[38;5;28;43msum\u001b[39;49m +=y%\u001b[32m10\u001b[39m\n\u001b[32m      7\u001b[39m         y//=\u001b[32m10\u001b[39m\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[38;5;28msum\u001b[39m)\n",
-      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'sum' where it is not associated with a value"
-     ]
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -468,7 +466,7 @@
     "Set creation: O(1) (constant size)\n",
     "List comprehension: O(n) with O(1) lookups\n",
     "Sorting vowels: O(k log k) where k = vowel count\n",
-    "Replacement: O(n) with O(1) lookups\n",
+    "Replacement: O(n) with O(1) lookup\n",
     "Overall: O(n + k log k) = O(n log k)\n",
     "Space Complexity:\n",
     "\n",
@@ -520,7 +518,7 @@
     "        vow = set('AEIOUaeiou') # AEIOU = 64+1, 64+5, 64+9, 64+15, 64+16+5,\n",
     "# aeiou = 64+32+1, 64+32+5, 64+32+9, 64+32+15, 64+32+16+5\n",
     "        vowels= [i for i in s if i in vow]\n",
-    "\n",
+    "    \n",
     "        vowels.sort(key=ord)\n",
     "        s = list(s)\n",
     "        m = 0\n",
@@ -986,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
