--- a/createLL.ipynb
+++ b/createLL.ipynb
@@ -129,6 +129,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1ddcd0f",
+   "metadata": {},
+   "source": [
+    "### Binary search in LL Not possible\n",
+    "- it  is not possible for linked lists because the algorithm is based on jumping directly to different array elements, and that is not possible with linked lists."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "09d06c60",
    "metadata": {},
    "source": [
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9d6c8239",
    "metadata": {},
    "outputs": [],
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "08ee0496",
    "metadata": {},
    "outputs": [
@@ -286,6 +295,191 @@
     "    return False \n",
     "search(head, 9)\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f31dd6c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the mininum value in the linked list is :  11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find lowest value in the list \n",
+    "class Node:\n",
+    "    def __init__(self,data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def findlowestvalue(head): # we need to declare 2 variable \n",
+    "    minvalue = head.data\n",
+    "    currentNode = head.next\n",
+    "    while currentNode:\n",
+    "        # condition for min value \n",
+    "        if currentNode.data<minvalue:\n",
+    "            minvalue = currentNode.data\n",
+    "        currentNode = currentNode.next\n",
+    "    return minvalue\n",
+    "node1 = Node(11)\n",
+    "node2 = Node(12)\n",
+    "node3 = Node(13)\n",
+    "node4 = Node(14)\n",
+    "node5 = Node(15)\n",
+    "node6 = Node(16)\n",
+    "node7 = Node(17)\n",
+    "\n",
+    "\n",
+    "node1.next = node2\n",
+    "node2.next = node3\n",
+    "node3.next = node4\n",
+    "node4.next = node5\n",
+    "node5.next = node6\n",
+    "node6.next = node7\n",
+    "\n",
+    "print('the mininum value in the linked list is : ', findlowestvalue(node1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2bad88b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before deletion:\n",
+      "7 -> 11 -> 3 -> 2 -> 9 -> null\n",
+      "\n",
+      "After deletion:\n",
+      "7 -> 11 -> 3 -> 9 -> null\n"
+     ]
+    }
+   ],
+   "source": [
+    "# delete a node in the linked list \n",
+    "class Node:\n",
+    "  def __init__(self, data):\n",
+    "    self.data = data\n",
+    "    self.next = None\n",
+    "\n",
+    "def traverseAndPrint(head):\n",
+    "  currentNode = head\n",
+    "  while currentNode:\n",
+    "    print(currentNode.data, end=\" -> \")\n",
+    "    currentNode = currentNode.next\n",
+    "  print(\"null\")\n",
+    "\n",
+    "def deleteSpecificNode(head, nodeToDelete):\n",
+    "  if head == nodeToDelete:\n",
+    "    return head.next\n",
+    "\n",
+    "  currentNode = head\n",
+    "  while currentNode.next and currentNode.next != nodeToDelete:\n",
+    "    currentNode = currentNode.next\n",
+    "\n",
+    "  if currentNode.next is None:\n",
+    "    return head\n",
+    "\n",
+    "  currentNode.next = currentNode.next.next\n",
+    "\n",
+    "  return head\n",
+    "\n",
+    "node1 = Node(7)\n",
+    "node2 = Node(11)\n",
+    "node3 = Node(3)\n",
+    "node4 = Node(2)\n",
+    "node5 = Node(9)\n",
+    "\n",
+    "node1.next = node2\n",
+    "node2.next = node3\n",
+    "node3.next = node4\n",
+    "node4.next = node5\n",
+    "\n",
+    "print(\"Before deletion:\")\n",
+    "traverseAndPrint(node1)\n",
+    "\n",
+    "# Delete node4\n",
+    "node1 = deleteSpecificNode(node1, node4)\n",
+    "\n",
+    "print(\"\\nAfter deletion:\")\n",
+    "traverseAndPrint(node1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4c5ae3d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list:\n",
+      "7 -> 3 -> 2 -> 9 -> null\n",
+      "\n",
+      "After insertion:\n",
+      "7 -> 97 -> 3 -> 2 -> 9 -> null\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insert node at specific node\n",
+    "# first need to create the node, and then at the position where we insert it\n",
+    "class Node:\n",
+    "  def __init__(self, data):\n",
+    "    self.data = data\n",
+    "    self.next = None\n",
+    "\n",
+    "def traverseAndPrint(head):\n",
+    "  currentNode = head\n",
+    "  while currentNode:\n",
+    "    print(currentNode.data, end=\" -> \")\n",
+    "    currentNode = currentNode.next\n",
+    "  print(\"null\")\n",
+    "\n",
+    "def insertNodeAtPosition(head, newNode, position):\n",
+    "  if position == 1:\n",
+    "    newNode.next = head\n",
+    "    return newNode\n",
+    "\n",
+    "  currentNode = head\n",
+    "  for _ in range(position - 2):\n",
+    "    if currentNode is None:\n",
+    "      break\n",
+    "    currentNode = currentNode.next\n",
+    "\n",
+    "  newNode.next = currentNode.next\n",
+    "  currentNode.next = newNode\n",
+    "  return head\n",
+    "\n",
+    "node1 = Node(7)\n",
+    "node2 = Node(3)\n",
+    "node3 = Node(2)\n",
+    "node4 = Node(9)\n",
+    "\n",
+    "node1.next = node2\n",
+    "node2.next = node3\n",
+    "node3.next = node4\n",
+    "\n",
+    "print(\"Original list:\")\n",
+    "traverseAndPrint(node1)\n",
+    "\n",
+    "# Insert a new node with value 97 at position 2\n",
+    "newNode = Node(97)\n",
+    "node1 = insertNodeAtPosition(node1, newNode, 2)\n",
+    "\n",
+    "print(\"\\nAfter insertion:\")\n",
+    "traverseAndPrint(node1)"
    ]
   },
   {
@@ -688,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
