--- a/operationonLL.ipynb
+++ b/operationonLL.ipynb
@@ -460,7 +460,7 @@
     "![image.png](attachment:image.png)\n",
     "- \n",
     "#### Recursive Function:\n",
-    "The core of the algorithm lies in implementing a recursive function responsible for reversing the linked list. This function operates based on the following principle:\n",
+    "\n",
     "\n",
     "If the base case conditions are not met, the function invokes itself recursively. This recursion continues until it reaches the base case, gradually reversing the linked list starting from the second node (node after it) onward.\n",
     "\n",
@@ -473,20 +473,20 @@
     "\n",
     "Steps:\n",
     "\n",
-    "Step 1: Establish Base Case Conditions: Check if the linked list is either empty or contains only one node. If so, the list is already reversed; hence, return the head as is.\n",
+    "- Step 1:  Base Case : Check if the linked list is either empty or contains only one node.  return the head as is.\n",
     "\n",
-    "Step 2: Recursively Reverse the List: Begin the recursive step by reversing the linked list, starting from the second node. Utilise a recursive call to the reverse linked list function, passing the next node as an argument.\n",
-    "step 3: Preserve Access to Remaining Nodes: To maintain access to the rest of the linked list while reversing the order, store a reference to the node following the current 'head' node. This step ensures continuity in the link sequence during reversal.\n",
+    "- Step 2: Recursively Reverse the List: Begin the recursive step by reversing the linked list, starting from the second node.  a recursive call to the reverse linked list function, passing the next node as an argument.\n",
+    "- step 3: Preserve Access to Remaining Nodes:  store a reference to the node following the current 'head' node. This step ensures continuity in the link sequence during reversal.\n",
     "\n",
-    "Step 4: Reverse Link Direction: Adjust the 'front' node to point to the current 'head' node in the reversed order. This action effectively reverses the link between the 'head' node and the 'front' node.\n",
+    "- Step 4: Reverse Link Direction: Adjust the 'front' node to point to the current 'head' node in the reversed order. This action effectively reverses the link between the 'head' node and the 'front' node.\n",
     "\n",
-    "Step 5: Prevent Cyclic References: Break the link from the current 'head' node to the 'front' node to prevent any cyclic formations. Set 'head->next' to 'NULL' to ensure the reversed segment of the list does not create a loop.\n",
+    "- Step 5: Prevent Cyclic References: Break the link from the current 'head' node to the 'front' node to prevent any cyclic formations. Set 'head->next' to 'NULL' to ensure the reversed segment of the list does not create a loop.\n",
     "\n",
-    "Step 6: Return the New Head: Finally, return the 'newHead,' which signifies the new head of the reversed linked list. This 'newHead' was initially the last node in the list before the reversal commenced.\n",
+    "- Step 6: Return the New Head: Finally, return the 'newHead,' which signifies the new head of the reversed linked list. This 'newHead' was initially the last node in the list before the reversal commenced.\n",
     "\n",
-    "Time Complexity: O(N) This is because we traverse the linked list twice: once to push the values onto the stack, and once to pop the values and update the linked list. Both traversals take O(N) time.\n",
+    "- Time Complexity: O(N) This is because we traverse the linked list twice: once to push the values onto the stack, and once to pop the values and update the linked list. Both traversals take O(N) time.\n",
     "\n",
-    "Space Complexity : O(1) No additional space is used explicitly for data structures or allocations during the linked list reversal process. However, it's important to note that there is an implicit use of stack space due to recursion. This recursive stack space stores function calls and associated variables during the recursive traversal and reversal of the linked list. Despite this, no extra memory beyond the program's existing execution space is allocated, hence maintaining a space complexity of O(1)."
+    "- Space Complexity : O(1) No additional space is used explicitly for data structures or allocations during the linked list reversal process. However, it's important to note that there is an implicit use of stack space due to recursion. This recursive stack space stores function calls and associated variables during the recursive traversal and reversal of the linked list. Despite this, no extra memory beyond the program's existing execution space is allocated, hence maintaining a space complexity of O(1)."
    ]
   },
   {
